Retornando o layout no formato anterior, shadowdom=false

--- a/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
+++ b/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
@@ -8,7 +8,7 @@
           <img  src="../img/receita-federal-logo.png" alt="logo"/>
         </a>
         <span class="br-divider vertical mx-half mx-sm-1"></span>
-        <div class="header-sign">Remessas Internacionais</div>
+        <div class="header-sign">Calculadora - Compras Internacionais</div>
       </div>
       <div class="header-actions">
         <div class="header-links dropdown">
