--- a/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
@@ -5,7 +5,7 @@
   <legend class="legend-border" style="color: #155BCB; justify-content: right;">
     <span class="icon" style="color: #155BCB; justify-content: right;">
       <i class="fa fa-filter-circle-dollar" aria-hidden="true"></i>
-    </span>Suas remessas
+    </span>Suas compras
   </legend>
   
   <div id="lista_remessas">
@@ -18,7 +18,8 @@
       </span>
       <span class="content"></span>
     </div>
-  </button>  
+  </button> 
+   
 </fieldset>
   
   
