--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Padrão Digital de Governo</title>
+    <title>Calculadora - Compras Internacionais</title>
 
     <!-- Scripts de componentes -->
     <script src="./componentes/cabecalho/cabecalho.js" type="module"></script>
@@ -17,8 +17,6 @@
 
      <!-- Scripts do gov.br -->
      <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
-     <script src="../bibliotecas/govbr-ds/core.min.js" type="module"></script>
-
 
     <!-- Font Rawline-->
     <!--link
@@ -61,7 +59,7 @@
       <div class="row">
       <div class="col-md">
           <div  class="card-content">
-            <div id="total-sum" class="total-sum">Total das remessas: US$ <span id="sum-value">0.00</span></div>
+            <div id="total-sum" class="total-sum">Total da encomenda com impostos: R$ <span id="sum-value">0.00</span></div>
             </div>
           </div>
         </div>
