Atualizando caminho relativo

--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Design próprio CSS -->
-    <link rel="stylesheet" href="./css/design.css" />
+    <link rel="stylesheet" href="./componentes/lista_remessas/dados_remessa/dados_remessa.css" />
 
     <!--- Ícones Font Awesome - Versão 6.5.1 -->
     <link rel="stylesheet" href="../icones/css/fontawesome.css" />
