Modal que pergunta se é remessa conforme

--- a/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
@@ -3,7 +3,7 @@
 <div id="container-lista-remessa">
   <div id="sobrepor"></div>
   <termo-de-uso></termo-de-uso>
-  <modal-remessas></modal-remessas>
+  <remessa-conforme></remessa-conforme>
 
   <fieldset id="listaRemessas" class="fieldset-border">
     <legend class="legend-border" style="color: #155BCB; justify-content: right;">
