maneira atual de cálculo

--- a/src/html/remessas_internacionais/componentes/lista_remessas_novo/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas_novo/dados_remessa/dados_remessa.html
@@ -18,15 +18,23 @@
         </div>
         <div class="coluna-input col-12 col-md-6 mb-3">
           <div class="br-input">
-            <label for="valor-remessa">Alíquota II</label>
+            <label for="valor-remessa">Alíquota</label>
             <input class="campos-calculados" id="aliquota-remessa" disabled>
           </div>  
           <div class="br-input">
-            <label for="ii-remessa">II</label>
-            <input class="campos-calculados" id="ii-remessa" disabled>
-          </div>                 
+            <label for="iiinicial-remessa">II Inicial</label>
+            <input class="campos-calculados" id="iiinicial-remessa" disabled>
+          </div>
           <div class="br-input">
-            <label for="soma-remessa">Valor + II</label>
+            <label for="desconto-remessa">Desconto</label>
+            <input class="campos-calculados" id="desconto-remessa" disabled>
+          </div> 
+          <div class="br-input">
+            <label for="iifinal-remessa">II Final</label>
+            <input class="campos-calculados" id="iifinal-remessa" disabled>
+          </div> 
+          <div class="br-input">
+            <label for="soma-remessa">Soma</label>
             <input class="campos-calculados" id="soma-remessa" disabled>
           </div>
             <div class="br-input">
