Painel de informações no cabeçalho. Correções no texto. Mudança dos labels

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -18,31 +18,32 @@
         </div>
         <div class="coluna-input col-12 col-md-6 mb-3">
           <div class="br-input">
-            <label for="valor-remessa">Alíquota II</label>
+            <label for="valor-remessa">Alíquota Importo de Importação (II) - Federal</label>
             <input class="campos-calculados" id="aliquota-remessa" disabled>
           </div>  
           <div class="br-input">
-            <label for="ii-remessa">II</label>
+            <label for="ii-remessa">Importo de Importação (II) - Federal</label>
             <input class="campos-calculados" id="ii-remessa" disabled>
           </div>                 
           <div class="br-input">
-            <label for="soma-remessa">Valor + II</label>
+            <label for="soma-remessa">Valor da Encomenda + II</label>
             <input class="campos-calculados" id="soma-remessa" disabled>
           </div>
-            <div class="br-input">
-            <label for="icms-remessa">ICMS</label>
+          <div class="br-input">
+            <label for="icms-remessa">ICMS - Estadual</label>
             <input class="campos-calculados" id="icms-remessa" disabled>
-          </div>  
+          </div>            
+          <div class="container-acoes-remessa">
+            <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+              <div class="menu-item divider" href="#" id="btn_remover" role="treeitem">
+                <span class="icon" style="justify-content: right;">
+                  <i class="fa fa-trash" aria-hidden="true"></i>
+                </span>          
+              </div>
+            </button> 
+          </div>
         </div>
-      </div>
-      <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
-        <div class="menu-item divider" href="#" id="btn_remover" role="treeitem">
-          <span class="icon" style="justify-content: right;">
-            <i class="fa fa-trash" aria-hidden="true"></i>
-          </span>
-          <span class="content"></span>
-        </div>
-    </button> 
+      </div>      
     </fieldset>
   </div>
 </div>
