dolar entrado pelo usuário

--- a/src/html/remessas_internacionais/componentes/dados_encomendas/dados_encomendas.html
+++ b/src/html/remessas_internacionais/componentes/dados_encomendas/dados_encomendas.html
@@ -7,7 +7,7 @@
             <label for="remessa_conforme">Remessa Conforme</label>
         </div>
         <div id="container_cotacao_dolar">
-            Cotação dólar: R$<span id='valor_cotacao_dolar'>0,00</span>
+            Cotação dólar (R$) <input id="valor_cotacao_dolar" placeholder="Reais (R$)" type="text" />
         </div>
     </div>
     <div id="total-sum" class="total-sum">Total da encomenda com impostos: R$ <span id="sum-value">0.00</span></div>    
