melhorando nome para painel_informacoes

--- a/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
+++ b/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
@@ -10,7 +10,7 @@
         <span class="br-divider vertical mx-half mx-sm-1"></span>
         <div class="header-sign">Calculadora - Compras Internacionais</div>
       </div>             
-      <dados-encomendas></dados-encomendas>   
+      <painel-informacoes></painel-informacoes>   
     </div>     
   </div>
 </header>
