--- a/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./dados_encomendas.css">
+<link rel="stylesheet" href="./painel_informacoes.css">
 
 <div class="card-content">
     <div id="container_configuracoes" class="flex-container">
