--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -13,7 +13,7 @@
           </div>
           <div class="br-input">
             <label for="valor-remessa">Total da encomenda com impostos</label>
-            <input class="total-remessa" id="total-remessa" placeholder="Reais (R$)" type="text" />
+            <input class="total-remessa" id="total-remessa" placeholder="Reais (R$)" type="text" disabled/>
           </div>
         </div>
         <div class="coluna-input col-12 col-md-6 mb-3">
