deixando o cabeçalho fixo

--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -66,8 +66,8 @@
 
       <footer class="br-footer pt-3" id="footer">
         <div class="container-lg">
-          <div class="info">
-            <div class="text-down-01 text-medium pb-3">Texto destinado a exibição de informações relacionadas à&nbsp;<strong><a href="">licença de uso</a>.</strong></div>
+          <div class="info">            
+            Todo o conteúdo deste site está publicado sob a licença <a rel="license" href="https://creativecommons.org/licenses/by-nd/3.0/deed.pt_BR">Creative Commons Atribuição-SemDerivações 3.0 Não Adaptada</a>.            
           </div>
         </div>
       </footer>
