Correção de texto; Arquivo com pendências, alterações, sugestões.

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -18,11 +18,11 @@
         </div>
         <div class="coluna-input col-12 col-md-6 mb-3">
           <div class="br-input">
-            <label for="valor-remessa">Alíquota Importo de Importação (II) - Federal</label>
+            <label for="valor-remessa">Alíquota Imposto de Importação (II) - Federal</label>
             <input class="campos-calculados" id="aliquota-remessa" disabled>
           </div>  
           <div class="br-input">
-            <label for="ii-remessa">Importo de Importação (II) - Federal</label>
+            <label for="ii-remessa">Imposto de Importação (II) - Federal</label>
             <input class="campos-calculados" id="ii-remessa" disabled>
           </div>                 
           <div class="br-input">
