--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/index.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/index.html
@@ -51,29 +51,29 @@
         <legend>Informações Pessoais</legend>
         <div class="form-row">
             <div class="form-group">
-                <label for="nome">Nome</label>
+                <label for="nome">Valor da encomenda (R$)</label>
                 <input type="text" id="nome" name="nome">
             </div>
             <div class="form-group">
-                <label for="sobrenome">Sobrenome</label>
+                <label for="sobrenome">Total da encomenda com impostos</label>
                 <input type="text" id="sobrenome" name="sobrenome">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Alíquota Imposto de Importação (II) - Federal</label>
                 <input type="email" id="email" name="email">
             </div>
             <div class="form-group">
-                <label for="telefone">Telefone</label>
+                <label for="telefone">Imposto de Importação (II) - Federal</label>
                 <input type="tel" id="telefone" name="telefone">
             </div>
             <div class="form-group">
-                <label for="cpf">CPF</label>
+                <label for="cpf">Valor da Encomenda + II</label>
                 <input type="text" id="cpf" name="cpf">
             </div>
             <div class="form-group">
-                <label for="endereco">Endereço</label>
+                <label for="endereco">ICMS - Estadual</label>
                 <input type="text" id="endereco" name="endereco">
             </div>
         </div>
