colocando todas as dependências no raiz do remessa para fazer deploy em produção

--- a/src/html/autorregularizacao/autorregularizao_original.html
+++ b/src/html/autorregularizacao/autorregularizao_original.html
@@ -2441,8 +2441,8 @@ export default BRSelect
   
 
   <script src="./tabela_debitos_autorregularizar.js" type="module"></script>
-  <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
-  <script src="../bibliotecas/govbr-ds/core.min.js" type="module"></script>
+  <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
+  <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
 
   </body>
 </html>
