--- a/src/html/exemplos/exemplo_responsividade.html
+++ b/src/html/exemplos/exemplo_responsividade.html
@@ -9,15 +9,15 @@
     <title>Exemplo responsividade</title>
 
     <!-- Font Rawline-->
-    <link rel="stylesheet" href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/" />
+    <link rel="stylesheet" href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css" />
+    <link rel="stylesheet" href="./bibliotecas/Fontes - Rawline/Rawline/" />
 
     <!-- Font Raleway-->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
 
     <!-- Design System GOV.BR CSS-->
-    <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
+    <link rel="stylesheet" href="./bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Ícones Font Awesome - Versão 6.5.1 -->
     <link rel="stylesheet" href="../icones/css/fontawesome.css" />
@@ -190,8 +190,8 @@
 
     <!-- Scripts de componentes -->
     <!--script src="./js/inicializacao.js"  type="module"></script-->
-    <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
-    <script src="../bibliotecas/govbr-ds/core.min.js" type="module"></script>
+    <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
+    <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
 
 </body>
 
