--- a/src/html/gendec/index.html
+++ b/src/html/gendec/index.html
@@ -14,8 +14,8 @@
     <!-- Font Rawline-->
     <link
     rel="stylesheet"
-    href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
-    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/"/>
+    href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
+    <link rel="stylesheet" href="./bibliotecas/Fontes - Rawline/Rawline/"/>
 
     <!-- Font Raleway-->
     <link
@@ -23,7 +23,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"/>
     
     <!-- Design System GOV.BR CSS-->
-    <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
+    <link rel="stylesheet" href="./bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Design próprio CSS -->
     <link rel="stylesheet" href="./css/design.css" />
@@ -74,8 +74,8 @@
     <script src="./componentes/dados_passageiros/dados_passageiros.js" type="module"></script>
     <script src="./componentes/declaracao_saude/declaracao_saude.js" type="module"></script>
     <script src="./js/popover.js" type="module"></script>
-    <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
-    <script src="../bibliotecas/govbr-ds/core.min.js" type="module"></script>
+    <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
+    <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
 
   </body>
 </html>
