--- a/src/html/gendec/testes.gendec.html
+++ b/src/html/gendec/testes.gendec.html
@@ -14,8 +14,8 @@
     <!-- Font Rawline-->
     <link
     rel="stylesheet"
-    href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
-    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/"/>
+    href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
+    <link rel="stylesheet" href="./bibliotecas/Fontes - Rawline/Rawline/"/>
 
     <!-- Font Raleway-->
     <link
@@ -23,7 +23,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"/>
     
     <!-- Design System GOV.BR CSS-->
-    <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
+    <link rel="stylesheet" href="./bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Design próprio CSS -->
     <link rel="stylesheet" href="./design_autorregularizacao.css" />
@@ -115,6 +115,6 @@
     </div>
   </body>
   <script src="../../../core-init.js"></script>
-  <script src="../bibliotecas/govbr-ds/core.min.js"></script>
+  <script src="./bibliotecas/govbr-ds/core.min.js"></script>
   <script src="./js/select.js"></script>
 </html>
