--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -16,15 +16,15 @@
      <script src="./js/main.js" type="module"></script>
 
      <!-- Scripts do gov.br -->
-     <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
+     <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
 
     <!-- Font Rawline-->
     <!--link
     rel="stylesheet"
-    href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/-->
+    href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/-->
 
     <!-- TODO: não entendi adicionar um diretório como stylesheet 
-    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/"/-->
+    <link rel="stylesheet" href="./bibliotecas/Fontes - Rawline/Rawline/"/-->
 
     <!-- Font Raleway-->
     <link
@@ -32,7 +32,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"/>
     
     <!-- Design System GOV.BR CSS-->
-    <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
+    <link rel="stylesheet" href="./bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Design próprio CSS -->
     <link rel="stylesheet" href="./css/design.css" />
