--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -13,14 +13,14 @@
 
 
   <!-- Font Rawline-->
-  <link rel="stylesheet" href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css" />
+  <link rel="stylesheet" href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css" />
 
   <!-- Font Raleway-->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
 
   <!-- Design System GOV.BR CSS-->
-  <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
+  <link rel="stylesheet" href="./bibliotecas/govbr-ds/core-lite.css" />
 
   <!--- Design próprio CSS -->
   <!-- <link rel="stylesheet" href="./css/design.css" /> -->
@@ -174,7 +174,7 @@
   <script src="./componentes/credenciamento/credenciamento.js" type="module"></script>
   <script src="./componentes/dados_pessoais/dados_pessoais.js" type="module"></script>
   <script src="./componentes/endereco_contato/endereco_contato.js" type="module"></script>
-  <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
+  <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
