colocando todas as dependências no raiz do remessa para fazer deploy em produção

--- a/src/html/remessas_internacionais/componentes/modal/termo_de_uso/termo_de_uso.html
+++ b/src/html/remessas_internacionais/componentes/modal/termo_de_uso/termo_de_uso.html
@@ -6,8 +6,8 @@
             <h1 class="modal-title">Aviso Importante</h1>
         </div>
         <div class="modal-body">
-            <p>Os cálculos fornecidos por esta ferramenta não são oficiais e servem apenas como uma estimativa dos impostos a serem pagos. Esta calculadora considera apenas mercadorias comuns e não abrange situações excepcionais, como isenção ou alíquota zero para medicamentos, entre outros.
-            </p>
+            <p>Os cálculos fornecidos por esta ferramenta não são oficiais e servem apenas como uma estimativa dos impostos a serem pagos. Esta calculadora considera apenas mercadorias comuns e não abrange situações excepcionais, como isenção ou alíquota zero para medicamentos, entre outros.</p>
+            <p>Atualize a cotação do dolar para obter resultados precisos.</p>
         </div>
         <div class="modal-footer">            
             <button class="button primary" type="button" id="btn_eu_concordo">Eu concordo</button>
