--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -38,9 +38,9 @@
     <link rel="stylesheet" href="./css/design.css" />
 
     <!--- Ícones Font Awesome - Versão 6.5.1 -->
-    <link rel="stylesheet" href="../icones/css/fontawesome.css" />
-    <link rel="stylesheet" href="../icones/css/brands.css" />
-    <link rel="stylesheet" href="../icones/css/solid.css" />
+    <link rel="stylesheet" href="./icones/css/fontawesome.css" />
+    <link rel="stylesheet" href="./icones/css/brands.css" />
+    <link rel="stylesheet" href="./icones/css/solid.css" />
   </head>
   <body>    
     <div class="template-base">
