--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -5,44 +5,42 @@
   <div class="col-sm">
     <fieldset>
       <!--<legend>Valor (Legend)</legend>-->
-      <div class="row coluna-row">
-        <div class="coluna-input col-12 col-md-6 mb-3">
-          <div class="br-input">
-            <label class="titulo-bloco" for="valor-remessa">Valor da encomenda (R$)</label>
-            <input class="valor-remessa" id="valor-remessa" placeholder="Reais (R$)" type="text" />
-          </div>
-          <div class="br-input">
-            <label for="valor-remessa">Total da encomenda com impostos</label>
-            <input class="total-remessa" id="total-remessa" placeholder="Reais (R$)" type="text" disabled/>
-          </div>
+      <div class="row">
+        <div class="br-input col-6 col-sm-6 col-md-6 col-lg-6">
+          <label class="titulo-bloco" for="valor-remessa">Valor da encomenda (R$)</label>
+          <input class="valor-remessa" id="valor-remessa" placeholder="Reais (R$)" type="text" />
         </div>
-        <div class="coluna-input col-12 col-md-6 mb-3">
-          <div class="br-input">
-            <label for="valor-remessa">Alíquota Imposto de Importação (II) - Federal</label>
-            <input class="campos-calculados" id="aliquota-remessa" disabled>
-          </div>  
-          <div class="br-input">
-            <label for="ii-remessa">Imposto de Importação (II) - Federal</label>
-            <input class="campos-calculados" id="ii-remessa" disabled>
-          </div>                 
-          <div class="br-input">
-            <label for="soma-remessa">Valor da Encomenda + II</label>
-            <input class="campos-calculados" id="soma-remessa" disabled>
-          </div>
-          <div class="br-input">
-            <label for="icms-remessa">ICMS - Estadual</label>
-            <input class="campos-calculados" id="icms-remessa" disabled>
-          </div>            
-          <div class="container-acoes-remessa">
-            <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
-              <div class="menu-item divider" href="#" id="btn_remover" role="treeitem">
-                <span class="icon" style="justify-content: right;">
-                  <i class="fa fa-trash" aria-hidden="true"></i>
-                </span>          
-              </div>
-            </button> 
-          </div>
+        <div class="br-input col-6 col-sm-6 col-md-6 col-lg-6">
+          <label for="valor-remessa">Total da encomenda com impostos</label>
+          <input class="total-remessa" id="total-remessa" placeholder="Reais (R$)" type="text" disabled/>
         </div>
+      </div>
+      <div class="row">
+        <div class="br-input">
+          <label for="valor-remessa">Alíquota Imposto de Importação (II) - Federal</label>
+          <input class="campos-calculados" id="aliquota-remessa" disabled>
+        </div>  
+        <div class="br-input">
+          <label for="ii-remessa">Imposto de Importação (II) - Federal</label>
+          <input class="campos-calculados" id="ii-remessa" disabled>
+        </div>                 
+        <div class="br-input">
+          <label for="soma-remessa">Valor da Encomenda + II</label>
+          <input class="campos-calculados" id="soma-remessa" disabled>
+        </div>
+        <div class="br-input">
+          <label for="icms-remessa">ICMS - Estadual</label>
+          <input class="campos-calculados" id="icms-remessa" disabled>
+        </div>
+      </div>
+      <div class="container-acoes-remessa">
+        <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+          <div class="menu-item divider" href="#" id="btn_remover" role="treeitem">
+            <span class="icon" style="justify-content: right;">
+              <i class="fa fa-trash" aria-hidden="true"></i>
+            </span>          
+          </div>
+        </button> 
       </div>      
     </fieldset>
   </div>
