--- a/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
@@ -14,10 +14,10 @@
     <div id="lista_remessas">
       <br-remessa></br-remessa>              
     </div>
-    <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+    <button class="br-button primary mr-3" type="button" aria-label="Ícone ilustrativo">
       <div class="menu-item divider" href="#" id="adicionar_remessa" role="treeitem">
         <span class="icon" style="justify-content: right;">
-          <i class="fa fa-plus" aria-hidden="true"></i>
+          <i class="fa fa-plus" aria-hidden="true"></i>Adicionar
         </span>
         <span class="content"></span>
       </div>
