--- a/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
@@ -17,7 +17,7 @@
     
 </div>-->
 
-<div class="card-content d-flex">
+<div class="card-content painel_informacoes d-flex">
     <div id="container_configuracoes" class="flex-container mt-2">
         <div id="container_cotacao_dolar">
             <b class="atualizar_dolar_label">Atualize a cotação do <br>dólar aqui: R$ </b>
