--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -7,7 +7,7 @@
       <!--<legend>Valor (Legend)</legend>-->
       <div class="row">
         <div class="br-input text-center col-6 col-sm-6 col-md-6 col-lg-6">
-          <label class="titulo-bloco" for="valor-remessa">Valor da encomenda (R$)</label>
+          <label class="valor-remessa" for="valor-remessa">Valor da encomenda (R$)</label>
           <input class="valor-remessa" id="valor-remessa" placeholder="Reais (R$)" type="text" />
         </div>
         <div class="br-input text-center col-6 col-sm-6 col-md-6 col-lg-6">
@@ -32,7 +32,7 @@
           <input class="campos-calculados" id="soma-remessa" disabled>
         </div>
         <div class="br-input text-center col-6 col-sm-6 col-md-6 col-lg-6">
-          <label for="icms-remessa">Estadual - ICMS</label>
+          <label class="icms-remessa" for="icms-remessa">Estadual - ICMS</label>
           <input class="campos-calculados" id="icms-remessa" disabled>
           <div class="p-3">
             <a href="#">Entenda esse valor</a>
