Alinhamento, estruturação - Teste no mobile

--- a/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.html
@@ -20,7 +20,7 @@
 <div class="card-content painel_informacoes d-flex">
     <div id="container_configuracoes" class="flex-container mt-2">
         <div id="container_cotacao_dolar">
-            <b class="atualizar_dolar_label text-center">Atualize a cotação <br>do dólar aqui: R$ </b><br>
+            <b class="atualizar_dolar_label text-center">Atualize a cotação do dólar aqui: R$ </b>
             <input class="text-center" id="valor_cotacao_dolar" placeholder="Reais (R$)" type="text" />
         </div>
     </div>
