--- a/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
+++ b/src/html/remessas_internacionais/componentes/cabecalho/cabecalho.html
@@ -7,7 +7,7 @@
     <div class="header-top">
       <div class="header-logo">
         <a style="text-decoration: none; color: #000000" href="https://www.gov.br/receitafederal/pt-br">
-          <img class="img-logo" src="../img/receita-federal-logo.png" alt="logo"/>
+          <img class="img-logo" src="./img/receita-federal-logo.png" alt="logo"/>
         </a>
         <span class="br-divider vertical mx-half mx-sm-1"></span>
         <div class="nome-pagina header-sign">Calculadora - Compras Internacionais</div>
