removendo visibilidade botao adicionar

--- a/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/lista_remessas.html
@@ -14,8 +14,8 @@
     <div id="lista_remessas">
       <br-remessa></br-remessa>              
     </div>
-    <button class="br-button primary mr-3" type="button" aria-label="Ícone ilustrativo">
-      <div class="menu-item divider" href="#" id="adicionar_remessa" role="treeitem">
+    <button id="adicionar_remessa" class="br-button primary mr-3" type="button" aria-label="Ícone ilustrativo">
+      <div class="menu-item divider" href="#"  role="treeitem">
         <span class="icon" style="justify-content: right;">
           <i class="fa fa-plus" aria-hidden="true"></i>Adicionar
         </span>
