atualização da mensagem de aviso

--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -51,10 +51,10 @@
         
         <div class="container-lg">         
           
-          <div class="br-message info">
+          <div class="br-message warning">
             <div class="icon"><i class="fas fa-info-circle fa-lg" aria-hidden="true"></i>
             </div>
-            <div class="content" aria-label="Informação. Seus dados só serão salvos após o preenchimento do primeiro campo do formulário." role="alert"><span class="message-title">Informação.</span><span class="message-body"> Seus dados só serão salvos após o preenchimento do primeiro campo do formulário.</span></div>
+            <div class="content" aria-label="Atenção. Estes cálculos são válidos até dia 31 de julho de 2024." role="alert"><span class="message-title">Atenção. </span><span class="message-body">Estes cálculos são válidos até dia 31 de julho de 2024</span></div>
             <div class="close">
               <button class="br-button circle small" type="button" aria-label="Fechar a messagem alterta">
                 <i class="fas fa-times" aria-hidden="true"></i>
