link para entenda esse cálculo

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -24,7 +24,7 @@
           <label for="ii-remessa">Federal - Imposto de Importação (II)</label>
           <input class="campos-calculados" id="ii-remessa" disabled>
           <div class="p-3">
-            <a href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/programa-remessa-conforme-o-que-e-como-funciona">Entenda esse valor</a>
+            <a target="_blank" href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/programa-remessa-conforme-o-que-e-como-funciona">Entenda esse valor</a>
           </div>
         </div>                 
         <div class="br-input campo-oculto">
@@ -35,7 +35,7 @@
           <label class="icms-remessa" for="icms-remessa">Estadual - ICMS</label>
           <input class="campos-calculados" id="icms-remessa" disabled>
           <div class="p-3">
-            <a href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/programa-remessa-conforme-o-que-e-como-funciona">Entenda esse valor</a>
+            <a target="_blank" href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/programa-remessa-conforme-o-que-e-como-funciona">Entenda esse valor</a>
           </div>
         </div>
       </div>
